# G-Alpha-HomeWork

./: .gitignore  .private_key  Cargo.toml  LICENSE  README.md  USAGE.md  config.example.toml  config.toml  quick_demo.sh  rpc_providers.md  run.sh  run_tests.sh
.github/workflows/: ci.yml
examples/: mcp_client.rs
scripts/: start.sh
src/: main.rs
src/ethereum/: client.rs  mod.rs  rpc.rs  types.rs
src/mcp/: server.rs  types.rs
src/tools/: balance.rs  mod.rs  price.rs  swap.rs
