[package]
name = "ethereum-mcp-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "MCP server for Ethereum balance queries and token swaps"
license = "MIT"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ethers = { version = "2.0", features = ["rustls", "abigen"] }
alloy = { version = "0.4", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
rust_decimal = { version = "1.32", features = ["serde"] }
rust_decimal_macros = "1.32"
dotenvy = "0.15"
once_cell = "1.19"
reqwest = { version = "0.11", features = ["json"] }
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
url = "2.4"
eyre = "0.6"
